# contract-checker

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/notebooks/: 01-contract-scanning.ipynb  02-signature-detection.ipynb
src/notebooks/helpers/: azure_content_understanding_client.py
src/utils/: __init__.py  contract_scanner.py  signature_detector.py
